@@ -9,7 +9,7 @@ store-cleartext-passwords-on-exit=True
 username-wordlist-path=/usr/share/wordlists/
 
 [GUISettings]
-process-tab-column-widths="125,0,26,26,26,0,100,100,0,0,0,0,0,0,0,755,100"
+process-tab-column-widths="125,0,100,150,100,0,100,100,0,0,0,0,0,0,0,481,100"
 process-tab-detail=false
 
 [GeneralSettings]
@@ -281,8 +281,8 @@ telnet-default-router=Check for default telnet router credentials, hydra -s [POR
 tftp-enum.nse=tftp-enum.nse, "nmap -Pn [IP] -p [PORT] --script=tftp-enum.nse --script-args=unsafe=1", tftp
 theharvester=Run theharvester, theharvester -d [IP]:[PORT] -b all -n -c -t -h, dns
 vnc-brute.nse=vnc-brute.nse, "nmap -Pn [IP] -p [PORT] --script=vnc-brute.nse --script-args=unsafe=1", vnc
-vnc-info.nse=vnc-info.nse, "nmap -Pn [IP] -p [PORT] --script=vnc-info.nse --script-args=unsafe=1", vnc
 vnc-default=Check for default VNC credentials, hydra -s [PORT] -C ./wordlists/vnc-betterdefaultpasslist.txt -u -o \"[OUTPUT].txt\" -f [IP] vnc, vnc
+vnc-info.nse=vnc-info.nse, "nmap -Pn [IP] -p [PORT] --script=vnc-info.nse --script-args=unsafe=1", vnc
 wafw00f=Run wafw00f, wafw00f [IP]:[PORT], "https,ssl,https-alt"
 whatweb=Run whatweb, "whatweb [IP]:[PORT] --color=never --log-brief=[OUTPUT].txt", "http,https,ssl,https-alt"
 wpscan=Run wpscan, wpscan --url [IP], "http,https,ssl,https-alt"
@@ -302,7 +302,7 @@ ssh=Open with ssh client (as root), [term] ssh root@[IP] -p [PORT], ssh
 telnet=Open with telnet, [term] telnet [IP] [PORT], 
 vncviewer=Open with vncviewer, vncviewer [IP]:[PORT], vnc
 xephyr=Open with Xephyr, [term] Xephyr -query [IP] :1, xdmcp
-xterm=Open terminal, [term] bash,
+xterm=Open terminal, [term] bash, 
 
 [SchedulerSettings]
 ftp-default=ftp, tcp
@@ -318,7 +318,7 @@ snmpcheck=snmp, udp
 x11screen=X11, tcp
 
 [StagedNmapSettings]
-stage1-ports="T:80,443"
+stage1-ports="T:80,81,443,4443,8080,8081,8082"
 stage2-ports="T:25,135,137,139,445,1433,3306,5432,U:137,161,162,1434"
 stage3-ports="Vulners,CVE"
 stage4-ports="T:23,21,22,110,111,2049,3389,8080,U:500,5060"
@@ -329,4 +329,5 @@ stage6-ports=T:30000-65535
 cutycapt-path=/usr/bin/cutycapt
 hydra-path=/usr/bin/hydra
 nmap-path=/sbin/nmap
+pyshodan-api-key=SNYEkE0gdwNu9BRURVDjWPXePCquXqht
 texteditor-path=/usr/bin/leafpad
